--- a/scatter-plot/css/styles_2829e3883dae7c421889.css
+++ b/scatter-plot/css/styles_2829e3883dae7c421889.css
@@ -37,6 +37,13 @@
     }
 }
 
+.HArg_ {
+    margin-top: 150px;
+}
+
+.-lVgE {
+
+}
 ._1DtW_ {
     font-weight: bold;
     font-size: 30px;
@@ -98,7 +105,7 @@
     border: 1px solid #eee;
     width: 80vmin;
     height: 80vmin;
-    margin: 40px auto;
+    margin: 20px auto;
 }
 
 ._2pVfe {
@@ -121,6 +128,11 @@
 ._2ec9G {
 
 }
+._23c0j {
+    color: red;
+    margin: 100px;
+}
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
